2020-07-13  Larus  <larus@Jim-Macbook-Air>

	* CPU/inst.cpp [https://sourceforge.net/p/spimsimulator/bugs/97/]:
	Incorrect call to write_ouput allows string injection.

2020-06-02  Larus  <larus@Jim-Macbook-Air>

	* CPU/inst.{cpp,h}, spim/Makefile [https://sourceforge.net/p/spimsimulator/bugs/96/]:
	Fix problem with incorrect decoding of binary values for FP instructions.

2020-05-09  larus  <larus@ubuntu>

	* Release 9.1.22 (Linux only):

	* QtSpim/QtSpim.pro:
	Use libGL from Qt installation rather than require full installation of OpenCL.

	* bin/release-debin:
	Fix Linux by explicity adding libraries files that aren't dll'ed.

2020-01-17  Larus  <larus@Jim-Macbook-Air>

	* Release 9.1.21
	
	* CPU/version.h:

2020-01-15  Larus  <larus@Jim-Macbook-Air>

	* CPU/parser.y:
	Fixed type error (g++-9).

2020-01-14  Larus  <larus@Jim-Macbook-Air>

	* Update copyrights.

	* Simplify MacOS packaging by moving file update to shell script
	from Packages specification.

	* Cleanup QMake process a bit.

2020-01-13  Larus  <larus@Jim-Macbook-Air>

	* QtSpim/QtSpim.pro:
	Delete unused statements.

2019-11-03  Larus  <larus@Jim-Macbook-Air>

	* CPU/inst.cpp (inst_decode) [jashank.jeremy@unsw.edu.au]:
	Miss second highest order bit in j instruction due to bad mask.

2019-04-13  Larus  <larus@Jim-Macbook-Air>

	* Documentation/H_P_AppendixA/HP_AppA.html [https://sourceforge.net/p/spimsimulator/bugs/88:
	Formatting problems in typos in mflo, mfhi.

2018-11-23  Larus  <larus@Jim-Macbook-Air>

	* README (https):
	Fix URLs for sourceforge.

2018-11-09  Larus  <larus@Jim-Macbook-Air>

	* Documentation/H_P_AppendixA/HP_AppA.html [https://sourceforge.net/p/spimsimulator/bugs/86/]:
	Opcode for swc1 was documented incorrectly as 0x31 instead of 0x39.

2018-09-16  Larus  <larus@Jim-Macbook-Air>

	* spim/Makefile, xspim/Makefile
	[https://sourceforge.net/p/spimsimulator/patches/6]:
	Improvements to Makefiles

2017-08-29  Larus  <larus@Jim-Macbook-Air>

	* CPU/version.h (SPIM_VERSION):